--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,29 @@
-cute-updator (0.8-1) UNRELEASED; urgency=medium
+lingmo-updator (1.9.9-20) UNRELEASED; urgency=medium
 
-  * Initial release CuteOS <support@cuteos.com>
+  * Lingmo OS <lingmo@lingmo.org>
 
- -- CuteOS <support@cuteos.com>  Sat, 29 Jan 2022 03:49:09 +0800
+ -- Lingmo OS Team <lingmo@lingmo.org>  Mon, 22 Jan 2024 10:28:01 +0800
+
+lingmo-updator (1.9.9-1) UNRELEASED; urgency=medium
+
+  * Lingmo OS <lingmo@lingmo.org>
+
+ -- Lingmo OS Team <lingmo@lingmo.org>  Wed, 27 Dec 2023 23:28:01 +0800
+
+lingmo-updator (1.0.1) UNRELEASED; urgency=medium
+
+  * Lingmo OS 1.0 <lingmoos@foxmail.com>
+
+ -- Lingmo OS <lingmoos@foxmail.com>  Thu, 10 Aug 2023 05:28:00 +0800
+
+lingmo-updator (1.0.0) UNRELEASED; urgency=medium
+
+  * Lingmo OS 1.0 <lingmoos@foxmail.com>
+
+ -- Lingmo OS <lingmoos@foxmail.com>  Mon, 31 Jul 2023 06:00:00 +0800
+
+lingmo-updator (0.8-1) UNRELEASED; urgency=medium
+
+  * Initial release LingmoOS <support@lingmoos.com>
+
+ -- LingmoOS <support@lingmoos.com>  Sat, 29 Jan 2022 03:49:09 +0800
