--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lingmo-updator (3.0.0-rc1) UNRELEASED; urgency=medium
+
+  * Lingmo OS <lingmo@lingmo.org>
+
+ -- Lingmo OS Team <lingmo@lingmo.org>  Fri, 4 Oct 2024 8:30:51 +0800
+
 lingmo-updator (1.9.9-20) UNRELEASED; urgency=medium
 
   * Lingmo OS <lingmo@lingmo.org>
