--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+lingmo-updator (3.0.0-rc6) helium; urgency=medium
+
+  [Lingmo OS Team]
+  * Update UI
+
+ -- Lingmo OS Team <lingmo@lingmo.org>  Fri, 17 Jan 2025 22:00:00 +0800
+
 lingmo-updator (3.0.0-rc5) helium; urgency=medium
 
   [Lingmo OS Team]
