--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+lingmo-updator (3.0.1-1~lingmo3) helium; urgency=medium
+
+  [Lingmo OS Team]
+  * Update Release
+
+ -- Lingmo OS Team <team@lingmo.org>  Fri, 31 Jan 2025 23:40:00 +0800
+
 lingmo-updator (3.0.0-rc6) helium; urgency=medium
 
   [Lingmo OS Team]
